@@ -23,6 +23,9 @@ module Netzke
     extend Session
     extend Masquerading
 
+    # Use Ext 3 compatibility layer
+    mattr_accessor :ext3_compat_uri
+
     # Configuration specified at the initialization times (set in the Engine in case of Rails)
     mattr_accessor :config
     @@config = {}
